# cemac-data-observatory

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: dbt-ci.yml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml  profiles.yml.example
dbt_project/models/marts/: _models.yml  cemac_digital_readiness.sql  dim_countries.sql  dim_indicators.sql  fct_observations.sql  mart_group_averages_yearly.sql  mart_pipeline_health.sql
dbt_project/models/staging/: _models.yml  _sources.yml  stg_countries.sql  stg_indicators.sql  stg_observations.sql
dbt_project/seeds/: country_metadata.csv  indicator_metadata.csv
docs/decisions/: ADR-001-postgres-over-cloud-warehouse.md
extract/: __main__.py  config.py  load.py  world_bank.py
flows/: digital_readiness.py  serve.py
pgadmin/: servers.json
sql/init/: 01_create_schemas.sql  02_metabase_reader.sh  02_metabase_reader.sql
tests/: test_world_bank.py
