[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cemac-data-observatory"
version = "0.1.0"
description = "Local warehouse and analytics stack for CEMAC indicators."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "dbt-core>=1.8",
  "dbt-postgres>=1.8",
  "pandas>=2.2",
  "prefect>=3.0",
  "psycopg[binary]>=3.2",
  "python-dotenv>=1.0",
  "requests>=2.32",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.8",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"
